# nippon-gatari

./: .gitignore  README.md  package-lock.json  package.json
client/: bsconfig.json  graphql_schema.json  package-lock.json  package.json  webpack.config.js
client/src/: App.re  Cards.re  ExtendedCss.re  GqlClient.re  GqlQuery.re  Helmet.re  Hepburn.re  ListPaginator.re  Redirect.re  Router.re  VerbAbout.re  VerbCard.re  VerbDetailContainer.re  VerbPanel.re  VerbsList.re  VerbsListContainer.re  VerbsListItem.re
gql-server/: Readme.md  compverb.ml  gql.ml  server.ml  verb_dict.json
renderer-service/: bsconfig.json  package.json  server.re
server/: Template.re  Udp.re  Utils.re  bsconfig.json  compverb.ml  compverb.native  dune  gql.ml  package.json  parser.ml  server.ml  server.re  verb_dict.json
server/assets/: Index.js  Index.js.map  index.html
server/dumps/: dump.csv  dump.json  errors.txt  verbs_edited.csv
server/lib/bs/: .bsbuild  .bsdeps  .ninja_log  .sourcedirs.json  Renderer.cmi  Renderer.cmj  Renderer.cmt  Renderer.js  Renderer.mlmap  Template-Renderer.cmi  Template-Renderer.cmj  Template-Renderer.cmt  Template.mlast  Template.mlast.d  Udp-Renderer.cmi  Udp-Renderer.cmj  Udp-Renderer.cmt  Udp.mlast  Udp.mlast.d  Utils-Renderer.cmi  Utils-Renderer.cmj  Utils-Renderer.cmt  Utils.mlast  Utils.mlast.d  build.ninja  server-Renderer.cmi  server-Renderer.cmj  server-Renderer.cmt  server.mlast  server.mlast.d
server/lib/js/: Template.bs.js  Utils.bs.js  server.bs.js
server/scripts/: parse_honbun.js  process_dump.js  yomikata.js  yomikata.ml
(+20 files in other folders)
